--- a/GocialBackend/.env.example
+++ b/GocialBackend/.env.example
@@ -6,11 +6,10 @@ SECRET_KEY=your-secret-key-change-in-production
 # Base de données
 DATABASE_URL=sqlite:///gocial.db
 # Pour PostgreSQL: postgresql://user:password@localhost:5432/gocial
-# Pour MySQL: mysql+pymysql://user:password@localhost:3306/gocial
 
 # JWT
 JWT_SECRET_KEY=your-jwt-secret-key-change-in-production
-JWT_ACCESS_TOKEN_EXPIRES=3600  # 1 heure en secondes
+JWT_ACCESS_HOURS=24
 
 # Email (optionnel)
 MAIL_SERVER=smtp.gmail.com
@@ -19,9 +18,12 @@ MAIL_USE_TLS=true
 MAIL_USERNAME=your-email@gmail.com
 MAIL_PASSWORD=your-app-password
 
-# Frontend URL (CORS)
-FRONTEND_URL=http://localhost:8081
+# Frontend URL (CORS) — comma-separated
+CORS_ORIGINS=http://localhost:8081,http://localhost:3000
 
 # Upload config
-MAX_CONTENT_LENGTH=16777216  # 16MB max upload
 UPLOAD_FOLDER=uploads
+
+# Server
+HOST=0.0.0.0
+PORT=5000
