--- a/GocialFrontMobile/ios/GocialFrontMobile/Info.plist
+++ b/GocialFrontMobile/ios/GocialFrontMobile/Info.plist
@@ -38,6 +38,12 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Nous avons besoin de votre localisation pour centrer la carte.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Gocial a besoin d'accéder à votre caméra pour prendre des photos de profil et d'activités.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Gocial a besoin d'accéder à vos photos pour choisir une image de profil ou d'activité.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Gocial souhaite enregistrer des photos dans votre galerie.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
