--- a/GocialFrontMobile/package.json
+++ b/GocialFrontMobile/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "web": "webpack serve --config webpack.config.js",
+    "web:build": "webpack --config webpack.config.js --mode production",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
@@ -28,6 +30,7 @@
     "moment": "2.30.1",
     "nativewind": "4.1.23",
     "react": "19.0.0",
+    "react-dom": "^19.0.0",
     "react-native": "0.78.0",
     "react-native-calendars": "1.1310.0",
     "react-native-gesture-handler": "2.24.0",
@@ -44,6 +47,7 @@
     "react-native-tab-view": "4.0.5",
     "react-native-toast-message": "2.3.0",
     "react-native-vector-icons": "10.2.0",
+    "react-native-web": "^0.19.13",
     "tailwindcss": "3.4.17"
   },
   "devDependencies": {
@@ -61,12 +65,20 @@
     "@types/moment": "2.11.29",
     "@types/react": "19.0.0",
     "@types/react-test-renderer": "19.0.0",
+    "babel-loader": "^10.0.0",
+    "babel-plugin-react-native-web": "^0.21.2",
+    "css-loader": "^7.1.4",
     "eslint": "8.19.0",
+    "html-webpack-plugin": "^5.6.6",
     "jest": "29.6.3",
     "prettier": "2.8.8",
     "react-native-svg-transformer": "1.5.0",
     "react-test-renderer": "19.0.0",
-    "typescript": "5.4.5"
+    "style-loader": "^4.0.0",
+    "typescript": "5.4.5",
+    "webpack": "^5.105.3",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.3"
   },
   "engines": {
     "node": ">=18"
