--- a/GocialFrontMobile/package.json
+++ b/GocialFrontMobile/package.json
@@ -65,6 +65,7 @@
     "@types/moment": "2.11.29",
     "@types/react": "19.0.0",
     "@types/react-test-renderer": "19.0.0",
+    "ajv": "8.18.0",
     "babel-loader": "^10.0.0",
     "babel-plugin-react-native-web": "^0.21.2",
     "css-loader": "^7.1.4",
