--- a/GocialFrontMobile/package.json
+++ b/GocialFrontMobile/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "web": "webpack serve --config webpack.config.js",
-    "web:build": "webpack --config webpack.config.js --mode production",
+    "web": "vite",
+    "web:build": "vite build",
+    "web:preview": "vite preview",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
@@ -52,7 +53,13 @@
   },
   "devDependencies": {
     "@babel/core": "7.25.2",
-    "@babel/preset-env": "7.25.3",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/plugin-transform-class-properties": "^7.28.6",
+    "@babel/plugin-transform-private-methods": "^7.28.6",
+    "@babel/plugin-transform-private-property-in-object": "^7.28.6",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
     "@babel/runtime": "^7.28.6",
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
@@ -65,6 +72,7 @@
     "@types/moment": "2.11.29",
     "@types/react": "19.0.0",
     "@types/react-test-renderer": "19.0.0",
+    "@vitejs/plugin-react": "^4.7.0",
     "ajv": "8.18.0",
     "babel-loader": "^10.0.0",
     "babel-plugin-react-native-web": "^0.21.2",
@@ -77,6 +85,7 @@
     "react-test-renderer": "19.0.0",
     "style-loader": "^4.0.0",
     "typescript": "5.4.5",
+    "vite": "^6.4.1",
     "webpack": "^5.105.3",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.3"
