--- a/GocialFrontMobile/tsconfig.json
+++ b/GocialFrontMobile/tsconfig.json
@@ -1,3 +1,8 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "extends": "@react-native/typescript-config/tsconfig.json",
+  "compilerOptions": {
+    "lib": ["es2022", "dom", "dom.iterable"],
+    "jsx": "react-jsx"
+  },
+  "exclude": ["node_modules", "dist", "**/Pods/**"]
 }
